# lectinai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: main.py  model_utils.py  morphometry.py
